# open-jobs-searcher

./: .cursorrules  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  ing BeautifulSoup for reliable parsing  main.py  pyproject.toml  requirements.txt
.cursor/commands/: check-logs.md  commit.md  implementation.md  test.md
.cursor/rules/: smart.mdc
data/: .gitkeep  jobs.db
src/: __init__.py  browser.py  config.py  constants.py  models.py  output.py
src/browser/: __init__.py  cookie_handler.py  exceptions.py  loader.py  navigation.py  patterns.py
src/database/: __init__.py  connection.py  models.py  repository.py
src/extraction/: __init__.py  candidate.py  extractor.py  strategies.py
src/llm/: __init__.py  base.py  cache.py  html_utils.py  job_extraction.py  ollama.py  openrouter.py  prompts.py  url_discovery.py
src/searchers/: __init__.py  base.py  cache_manager.py  company_info.py  hh.py  http_client.py  job_converter.py  job_extraction.py  job_filters.py  karriere.py  page_fetcher.py  rate_limiter.py  stepstone.py  url_discovery.py  website.py
tests/: README.md  conftest.py  protocols.py  test_architecture.py  test_boundary_regression.py  test_cache_manager.py  test_integration_parsing.py  test_job_board_parsers.py  test_lazy_loading.py  test_llm_cache.py  test_rate_limiter.py  test_smoke_browser.py  test_smoke_extraction.py  test_smoke_llm_base.py  test_smoke_prompts.py  test_translation.py  test_website_filters.py
tests/fixtures/: 1nce_jobs.html  3p_services_jobs.html  3ss_careers.html  4dd_werbeagentur_jobs.html  (+19 more)
(+24 files in other folders)
